--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,33 +7,117 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
-    <ListView
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:id="@+id/list_itemharga"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp"></ListView>
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:gravity="center_horizontal"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:weightSum="1">-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/tvitem"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textSize="14sp" />-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/tvharga"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textSize="14sp" />-->
 
+<!--    </LinearLayout>-->
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="15dp"
+        android:id="@+id/list_itemharga"
+        app:cardElevation="3dp"
+        app:cardUseCompatPadding="true">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:weightSum="1">
+        android:padding="15dp">
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Item"
             android:id="@+id/tvitem"
             android:textColor="@color/black"
-            android:textSize="14sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/tvharga"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rp "
+            android:textColor="@color/black" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="3"
+        android:gravity="end"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/remove"
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_restore_from_trash_24"
+            app:tint="@color/black" />
+
+        <ImageView
+            android:id="@+id/imageMinus5"
+            android:layout_width="17dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_add_24"
+            app:tint="@color/black" />
+
+        <TextView
+            android:id="@+id/tvPricePastaGigi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="0"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/imageAdd5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:tint="@color/design_default_color_secondary_variant" />
+
+    </LinearLayout>
+
+    </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+<!--    <ListView-->
+<!--        android:id="@+id/list_itemharga"-->
+<!--        android:layout_width="409dp"-->
+<!--        android:layout_height="729dp"-->
+<!--        tools:layout_editor_absoluteX="1dp"-->
+<!--        tools:layout_editor_absoluteY="1dp"></ListView>-->
 
 
 </RelativeLayout>
